fix whitespace and removed body position: static !important; style for prevention of google translate bar; not needed

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,7 +9,6 @@
  *= require bootstrap-sortable
 */
 
-
 body, html {
     height: 100% !important;
 }
@@ -19,7 +18,6 @@ body {
     margin-top: 0px !important;
     padding-bottom: 0px !important;
     background-color: whitesmoke !important;
-    position: static !important;
 }
 
 .ls_infobox {
